# airflow-postgres-plugin

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/airflow_postgres_plugin/: __init__.py  plugin.py
src/airflow_postgres_plugin/hooks/: __init__.py  postgres_hook.py
src/airflow_postgres_plugin/operators/: __init__.py  file_to_postgres_table_operator.py  pandas_to_postgres_bulk.py  pandas_to_postgres_operator.py  postgres_table_to_file_operator.py  postgres_to_file_operator.py
tasks/: __init__.py
